Fixed vulnerability issues

--- a/projects/ngx-floating-img-tester/src/app/features/api/api.component.html
+++ b/projects/ngx-floating-img-tester/src/app/features/api/api.component.html
@@ -34,7 +34,7 @@
                 <p>Add ngx-floating-img in your template file</p>
                 <code>
                   <div>&lt;ngx-floating-img ... [options] ... &gt;</div>
-                  <div class="inner-ele">&lt;img src="thumbImgSrc"&gt;&lt;/img&gt;</div>
+                  <div class="inner-ele">&lt;img src="thumbImgSrc" /&gt;</div>
                   <div>&lt;/ngx-floating-img&gt;</div>
                 </code>
               </li>
